--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-h1 {
-  text-align: center;
-  color: white;
-}
-
 section {
   margin: 1rem auto;
   width: 90%;
@@ -21,6 +16,7 @@ button {
   color: white;
   padding: 0.75rem 2rem;
   border-radius: 20px;
+  margin: 20px;
 }
 
 button:focus {
