--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -18,3 +18,11 @@
   margin: 0;
   font-size: 1rem;
 }
+
+.movie button {
+  border: 2px solid orange;
+}
+
+.movie button:active {
+  transform: scale(0.95);
+}
